--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^3.1.2",
     "gatsby-image": "^3.1.0",
+    "gatsby-plugin-google-fonts-v2": "^1.0.0",
     "gatsby-plugin-image": "^1.1.2",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^3.4.0",
